# llm_video_summarizer

./: .gitattributes  LICENSE  README.md  pyproject.toml  video_summarizer.py
models/: Readme.md  pyannote_diarization_config.yaml
